--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,14 @@ body {
   background: #E7F6FF;
 }
 
+* {
+  font-family: 'Inter', system-ui;
+}
+
+button {
+  padding: 0;
+}
+
 .wrapper {
   border-radius: 20px;
   background: #FFF;
@@ -32,12 +40,36 @@ header {
     margin: 0;
   }
 
+  .search-block {
+    border-radius: 10px;
+    border: 1px solid #F3F3F3;
+    padding: 0 15px;
+
+    input {
+      border: 0;
+      padding: 10px;
+      font-size: 15px;
+      width: 200px;
+    }
+  }
+
   .card {
     width: 220px;
     border-radius: 40px;
     border: 1px solid #F3F3F3;
     padding: 30px;
     margin-right: 30px;
+    transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+
+    &:hover {
+      box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.06);
+      transform: translateY(-5px);
+    }
+
+    .favorite {
+      position: absolute;
+      cursor: pointer;
+    }
 
     span {
       font-size: 13px;
@@ -63,5 +95,131 @@ header {
     border-radius: 8px;
     background: #FFFFFF;
     cursor: pointer;
+  }
+}
+
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+
+.drawer {
+  position: absolute;
+  width: 420px;
+  right: 0;
+  height: 100%;
+  padding: 30px;
+  background: #FFF;
+  box-shadow: -10px 4px 24px 0px rgba(0, 0, 0, 0.10);
+
+  h2 {
+    margin: 0;
+  }
+
+  .items {
+    flex: 1;
+    overflow: auto;
+    margin-bottom: 40px;
+  }
+
+  .cartItem {
+    padding: 30px 20px 20px;
+    border-radius: 20px;
+    border: 1px solid #F3F3F3;
+    overflow: hidden;
+
+    .cartImage {
+      width: 70px;
+      height: 70px;
+      margin-right: 20px;
+      background-size: contain;
+      background-position: 0 -3px;
+      background-repeat: no-repeat;
+    }
+
+    .cartInfo {
+      max-width: 176px;
+
+      p {
+        font-size: 16px;
+        margin: 0 0 8px;
+      }
+
+      b {
+        font-size: 14px;
+      }
+    }
+
+    img {
+      margin-top: 35px;
+    }
+  }
+
+  .removeBtn {
+    opacity: 0.5;
+    cursor: pointer;
+    transition: opacity 0.15s ease-in-out;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  .price {
+
+    p {
+      margin: 0;
+    }
+
+    .dashedBorder {
+      border: 1px dashed #DFDFDF;
+      flex: 1;
+      position: relative;
+      top: -2px;
+      align-self: flex-end;
+      margin: 0 7px;
+    }
+
+    .greenBtn {
+      position: relative;
+      align-self: center;
+      width: 325px;
+      height: 55px;
+      color: #FFF;
+      margin-top: 24px;
+      text-align: center;
+      font-size: 16px;
+      font-weight: 600;
+      border-radius: 18px;
+      border: none;
+      background: #9DD458;
+      cursor: pointer;
+      transition: background 0.1 ease-in-out;
+
+      &:hover {
+        background: lighten(#9DD458, 5%);
+
+        img {
+          transform: translateX(5px);
+
+        }
+      }
+
+      &:active {
+        background: darken(#9DD458, 5%);
+      }
+    }
+
+    .imgArrow {
+      position: absolute;
+      top: 22px;
+      right: 30px;
+      transition: transform 0.15s ease-in-out;
+    }
   }
 }
