--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -3,7 +3,6 @@
   border-radius: 40px;
   border: 1px solid #F3F3F3;
   padding: 30px;
-  margin-bottom: 40px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
   &:hover {
@@ -14,6 +13,15 @@
   .favorite {
     position: absolute;
     cursor: pointer;
+
+    img{
+      opacity: 1;
+
+      &:hover{
+        opacity: 0.7;
+      }
+    }
+
   }
 
   span {
@@ -43,6 +51,9 @@
     background: #FFFFFF;
     cursor: pointer;
 
+    &:hover {
+      opacity: 0.7;
+    }
   }
 
   .button_background_green {
