добавляет useContext, sceletonReact, отображение значков закладок и корзины, api-orders

--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -106,7 +106,12 @@
       font-weight: 600;
     }
 
+    .greenTitle {
+      color: #87C20A;
+    }
+
     p {
+      opacity: 0.4;
       margin: 0 0 16px;
       text-align: center;
       font-size: 16px;
