--- a/src/index.scss
+++ b/src/index.scss
@@ -89,6 +89,16 @@ header {
   cursor: pointer;
   transition: background 0.1 ease-in-out;
 
+  &:disabled {
+    background-color: #bebebe;
+    animation: button-loading 0.8s ease-in-out infinite;
+    cursor: default;
+
+    &:hover {
+      background-color: #bebebe;
+    }
+  }
+
   &:hover {
     background: lighten(#9DD458, 5%);
 
@@ -123,4 +133,18 @@ header {
 
 .greenBtn_short_width {
   width: 250px;
+}
+
+@keyframes button-loading {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.7;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
