--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -6,16 +6,31 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.3s ease-out, visibility 0.3s ease-out;
+  overflow: hidden;
+}
+
+.overlayVisible {
+  visibility: visible;
+  opacity: 1;
+
+  .drawer {
+    transform: translateX(0);
+  }
 }
 
 .drawer {
-  position: absolute;
+  position: fixed;
   width: 420px;
   right: 0;
   height: 100%;
   padding: 30px;
   background: #FFF;
   box-shadow: -10px 4px 24px 0px rgba(0, 0, 0, 0.10);
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
 
   h2 {
     margin: 0;
