--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,10 @@ body {
   background: #E7F6FF;
 }
 
+.body-overflow {
+  overflow: hidden;
+}
+
 * {
   font-family: 'Inter', system-ui;
 }
@@ -19,7 +23,7 @@ button {
   background: #FFF;
   box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.04);
   max-width: 1080px;
-  margin: 85px auto 0;
+  margin: 30px auto 20px;
 }
 
 header {
@@ -33,6 +37,18 @@ header {
   p {
     margin: 0;
   }
+
+  li {
+    transition: opacity 0.2 linear;
+
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+}
+
+.activeNav {
+  border-bottom: 1px solid rgba(92, 92, 92, 0.6);
 }
 
 .content {
