--- a/src/index.scss
+++ b/src/index.scss
@@ -85,6 +85,9 @@ header {
   }
 
   .cardTable {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    justify-items: center;
     gap: 30px 40px;
   }
 }
